style.css
html {
  overflow: hidden;
  overscroll-behavior: none;
}
body {
  height: 100vh;
  overflow: auto;
  padding: 35px;
  display: flex;
  flex-direction: column;
  background: url(wallpaper.png) no-repeat center center fixed;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: white;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}
h1 {
  margin: 15px 0;
  font-size: 28px;
  text-align: center;
  font-weight: 200;
}
input {
  transition: 0.5s ease-in-out;
  margin: 10px 0;
  font-size: 14px;
  padding: 5px;
  background: rgba(0, 0, 0, 0.20);
  border: none;
  color:white;
}

.btn-group {
  display: flex;
  flex-direction: column;
  height: 10%;
  margin: 55px 500px;
  align-self: center;
  justify-self: center;
  justify-content: space-around;

}

button {
  margin: 5px;
  padding: 10px 50px;
  border: none;
  font-size: 18px;
  font-weight: 300px;
  transition: 0.5s ease-in-out;
  border-radius: 20px;
}

label {
  font-size: 14px;
  width: 100%;
}
form {
  height: 20%;
  width: 100%
  display: flex;
  flex-direction: column;
  padding: 0;
  text-align: center;
  /* margin: 55px 500px; */
}

form button {
  background: white;

  margin: 5px 0;
  color: #49ba6b;
}

.start {
  background: white;
  color: #49ba6b;
}
.break {
  background: white;
  color: #49ba6b;
}

.pause {
  background: white;
  color: #49ba6b;
}

.reset {
  background: #33824b;
  color: white;
}

.resume {
  background: rgb(131, 10, 252);
  color: white;
}

.clock {
  padding: 3px;
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  height: 30%;
  font-size: 48px;

  grid-area: clock;

}
.progress-ring {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.progress-ring__circle {
  transition: 0.5s;
  transform: rotate(-90deg);
  transform-origin: 50% 50%;
  stroke: #33824b;
}

.danger {
  stroke: rgb(243, 17, 28);
  animation: pulse 0.9s ease-in-out infinite;
}

@keyframes pulse {
  0%,
  100% {
    transform: rotate(-90deg) scale(1);
  }
  50% {
    transform: rotate(-90deg) scale(1.01);
  }
  75% {
    transform: rotate(-90deg) scale(0.99);
  }
}

/*here and below is new stuff added by alyssa*/
::placeholder {
  color: rgba(255, 255, 255, 0.6);
}

/* ASHTON: Added effect too all buttons on the page */
.save:hover, .signupbtn:hover, .loginbtn:hover , .btn:hover , .start:hover, .pause:hover{
  background: #33824b;
  color: white;
}

.reset:hover{
  background: white;
  color: #33824b;
}


button {
	cursor: pointer;
}

.login-container {
	background: rgba(0, 0, 0, 0.15);
  width: 700px;
  text-align: right;
  margin:0px auto 0px auto;
  border-radius: 10px;
  padding: 10px;

}

/* Popup container - can be anything you want */
.popup {
  position: relative;
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* The actual popup */
.popup .popuptext {
  visibility: hidden;
  width: 160px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 8px 0;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -80px;
}

/* Popup arrow */
.popup .popuptext::after {
  content: "";
  position: absolute;
  top: 0%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
  transform: rotate(180deg);
}

/* Toggle this class - hide and show the popup */
.popup .show {
  visibility: visible;
  -webkit-animation: fadeIn 1s;
  animation: fadeIn 1s;
}

/* Add animation (fade in the popup) */
@-webkit-keyframes fadeIn {
  0% { opacity: 0 }
  50% { opacity: 1 }
}

@keyframes fadeIn {
  0%,100% { opacity: 0 }
  50% { opacity: 1 }
}

{box-sizing: border-box;}

/* Button used to open the contact form - fixed at the bottom of the page */
.open-button {
  background-color: #555;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  bottom: 23px;
  right: 28px;
  width: 280px;
}

/* The popup form - hidden by default */
.signup-form-popup {
  display: none;
  position: fixed;
  bottom: 0;
  right: 15px;
  z-index: 9;
}

/* Add styles to the form container */
.signup-form-container {
  border-radius: 10px;
  max-width: 300px;
  padding: 10px;
  background-color: #399f55;
  background: rgba(0, 0, 0, 0.20);
}

/* Full-width input fields */
.signup-form-container input[type=text], .signup-form-container input[type=password] {
  width: 250px;
  padding: 15px;
  margin: 5px 0 22px 0;
  border: none;
  background: rgba(0, 0, 0, 0.20);
}

/* When the inputs get focus, do something */
.signup-form-container input[type=text]:focus, .signup-form-container input[type=password]:focus {
  background: rgba(0, 0, 0, 0.35);
  outline: rgba(0, 0, 0, 0.35);
}

/* Set a style for the submit/login button */
.signup-form-container .btn {
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  width: 100%;
  margin-bottom:10px;
  opacity: 0.8;
}

/* Add a DARK GREEN background color to the cancel button */
.signup-form-container .cancel {
  background: #33824b;
  color:white;
}

.signup-form-container .cancel:hover {
  background: white;
  color: #33824b;
}

.settings {
  display: incline-block;
  width:100%;
  text-align:center;

}

